feat: Initialize project with MiSans Thai fonts, 3D rendering libraries, Supabase integration, structured styling, and project generation templates.

--- a/package.json
+++ b/package.json
@@ -6,12 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "supabase-start": "supabase start",
+    "supabase-stop": "supabase stop",
+    "supabase-reset": "supabase reset",
+    "supabase-migrate": "supabase db reset",
+    "supabase-generate": "supabase gen types typescript --local --schema public > src/domain/types/supabase.ts",
+    "supabase-db-diff": "supabase db diff --schema public",
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@react-spring/web": "^10.0.3",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
+    "@react-three/rapier": "^2.2.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.58.0",
+    "@uidotdev/usehooks": "^2.4.1",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hook-form": "^7.64.0",
+    "react-to-print": "^3.1.1",
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.181.1",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
